--- a/BasicCPP/BasicCPP.vcxproj.filters
+++ b/BasicCPP/BasicCPP.vcxproj.filters
@@ -10,4 +10,9 @@
       <Filter>main</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="file_work.h">
+      <Filter>main</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
